# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/8.0/en/

Version 8.0.33

  - Fix for bug Bug#108643 (Bug#34652568), Commit statement not effect when two params turns on.

  - Fix for Bug#34918989, Pluggable classes are initialized even when they cannot be used by Connector/J.

  - Fix for Bug#93415 (Bug#28992710), Documentation for getDefaultSchema() Needs Improvements.

  - Fix for Bug#110168 (Bug#35110706), yum update fails upgrading Connector/J package.

  - Fix for Bug#35018216, Problems with Connector/J RPM's: jar names renamed.

  - Fix for Bug#107577 (Bug#34325361), rewriteBatchedStatements not work when table column name contains 'value' string.

  - Fix for Bug#109377 (Bug#34900156), rewriteBatchedStatements doesn't work when parenthesis are found in values.

  - Fix for Bug#109808 (Bug#35021038), DatabaseMetaData#getPrimaryKeys should ordered by COLUMN_NAME.

  - Fix for Bug#109864 (Bug#35034666), Connector/J 8.0.32 hangs on MySQL 5.5 with prepared statements.

  - Fix for Bug#109807 (Bug#35021014), DatabaseMetaData#getTypeInfo should ordered by DATA_TYPE.

  - Fix for Bug#77368 (Bug#21321849), "LOAD DATA LOCAL INFILE" doesn't work properly with relative paths.

  - Fix for Bug#109243 (Bug#34852047), Judge whether the returned result set of the sql statement is incorrect.

  - WL#15490, Support OCI ephemeral key based authentication.

Version 8.0.32

  - Fix for Bug#104954 (Bug#33361205), MysqlDataSource fails to URL encode database name when constructing JDBC URL.
    Thanks to Jared Lundell for his contribution. 

  - Fix for Bug#102520 (Bug#32476663), serverSideStatementCache ignores resultSetType.

  - Fix for Bug#68608 (Bug#16690898), UpdatableResultSet does not properly handle unsigned primary key.

  - Fix for Bug#102678 (Bug#32536384), Connector/J 8 query with explain can not return ResultRow.

  - Fix for Bug#99604 (Bug#31612628), Add support to row alias on INSERT... ON DUPLICATE KEY UPDATE on batch mode.
